--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bulletinboard",
   "version": "0.0.0",
   "private": true,
+  "engines": { "node": "18.6.0" },
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
